# crop-circle

./: .gitignore  Procfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  webpack-stats.json  webpack.config.js
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20200721_2103.py  0003_auto_20200722_1355.py  0004_auto_20200722_1423.py  0005_crop_item.py  0006_auto_20200724_1909.py  0007_auto_20200724_2024.py  0008_auto_20200724_2053.py  0009_auto_20200724_2054.py  0010_auto_20200726_0115.py  0011_auto_20200726_0119.py  0012_auto_20200726_1723.py  0013_auto_20200726_1833.py  0014_auto_20200726_1836.py  0015_auto_20200726_1846.py  0016_offsite_hours.py  0017_auto_20200726_2316.py  0018_auto_20200726_2317.py  0019_auto_20200727_1550.py  0020_auto_20200728_0134.py  0020_auto_20200728_1702.py  0021_auto_20200728_0138.py  0022_auto_20200728_0139.py  0023_farm_address.py  0024_auto_20200728_0140.py  0025_auto_20200728_0144.py  0026_place.py  0027_remove_place_address.py  0028_delete_place.py  0029_auto_20200728_1637.py  0030_auto_20200728_1643.py  0031_remove_crop_offsite.py  0032_auto_20200728_1825.py  0033_auto_20200728_1826.py  0034_auto_20200729_1537.py  0034_merge_20200729_0055.py  0034_merge_20200729_1827.py  0035_auto_20200729_1827.py  0035_merge_20200729_1636.py  0036_auto_20200729_1644.py  (+27 more)
crop_circle/: asgi.py  settings.py  urls.py  wsgi.py
static/: app.js  styles.css
static/js/: App.js  FarmCard.js  (+4 more)
templates/: base.html
templatetags/: custom_tags.py
users/: admin.py  models.py  views.py
(+76 files in other folders)
